get-pop-tasks-measureNames api